interface Moveable {
    void move();
}
